--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+.env
+.env.*
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,3 +23,4 @@ yarn-error.log*
 *.sln
 *.sw*
 deploy.js
+.editorconfig
